corrected transition on page, autocomplete styles, maked custom scrollbar for message input

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -14,13 +14,8 @@
     letter-spacing: 3px;
     text-transform: uppercase;
 
-    transition: color 0.3s;
-
-    &:hover {
-      color: $c-blue;
-    }
-    // transition-duration: 0.9s;
-
+    @include hover(color, $c-blue);
+    
     &::after {
       content: "";
       display: block;
