--- a/src/styles/blocks/process-card.scss
+++ b/src/styles/blocks/process-card.scss
@@ -27,7 +27,7 @@
     
     &--text {
       // text-align: center;
-      color: #2060f6;
+      color: $c-blue;
       font-family: "Poppins", sans-serif;
       font-size: 13px;
       font-style: normal;
@@ -55,13 +55,9 @@
     background-image: url(/images/services/button.svg);
     cursor: pointer;
 
-    &:hover {
-      background-color: $c-hover-blue;
-    }
+    @include hover (background-color, $c-hover-blue);
 
-    &:active {
-      @include hover (transform, scale(0.97));
-    }
+    @include active (transform, scale(0.9));
     
     &--text {
       padding-left: 56px;
