--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -90,13 +90,10 @@
   border-radius: 50%;
   cursor: pointer;
   // background: linear-gradient(90deg, rgba(255,255,255, 0) 0%, #fff);
-  &:hover {
-    background-color: #ffffffd8;
-  }
+  
+  @include hover (background-color, #ffffffd8);
 
-  &:active {
-    @include hover (transform, scale(0.97));
-  }
+  @include active (transform, scale(0.9));  
 
   &__arr {
     background-repeat: no-repeat;
