--- a/src/styles/utils/_button.scss
+++ b/src/styles/utils/_button.scss
@@ -17,15 +17,11 @@
   line-height: normal;
   cursor: pointer;
 
+  @include hover (background-color, $c-hover-blue);
+
+  @include active (transform, scale(0.9));
+  
   @include onTablet {
     width: 264px;
-  }
-
-  &:hover {
-    @include hover (background-color, $c-hover-blue);
-  }
-
-  &:active {
-    @include hover (transform, scale(0.97));
   }
 }
